Allow finding pixel location from global coordinates

--- a/libtest.ipynb
+++ b/libtest.ipynb
@@ -62,7 +62,8 @@
    "outputs": [],
    "source": [
     "# get information about the radar volume\n",
-    "radar_data.get_stats()"
+    "stats = radar_data.get_stats()\n",
+    "stats"
    ]
   },
   {
@@ -86,9 +87,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get a pixel's position for a latitude and longitude\n",
+    "location = radar_data.get_pixel_for_location(stats[\"latitude\"] - 1, stats[\"longitude\"] + 1, 3000)\n",
+    "print(\"get_pixel_for_location output\", location)\n",
+    "# get pixel in buffer\n",
+    "pixel_location = (math.floor(location[\"sweep\"]), math.floor(location[\"theta\"]), math.floor(location[\"radius\"]))\n",
+    "print(\"pixel location:\", pixel_location)\n",
+    "print(\"pixel value:\", buffer[pixel_location[0], pixel_location[1], pixel_location[2]])\n",
+    "\n",
+    "# invalid example below lowest sweep\n",
+    "print(\"invalid output\", radar_data.get_pixel_for_location(stats[\"latitude\"] - 1, stats[\"longitude\"] + 1, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# a function to correctly plot sweep buffers\n",
     "def plot_radial_image(buffer):\n",
-    "\ttheta, rad = np.meshgrid(np.linspace(np.pi * 2.5, np.pi * 0.5, buffer.shape[0]), np.linspace(0, 1, buffer.shape[1]))\n",
+    "\ttheta, rad = np.meshgrid(np.linspace(np.pi * 2.5, np.pi * 0.5, buffer.shape[0]), np.linspace(0, buffer.shape[1], buffer.shape[1]))\n",
     "\t#print(theta.shape, rad.shape)\n",
     "\tfig = plt.figure()\n",
     "\tax = fig.add_subplot(111, polar='True')\n",
@@ -196,9 +215,10 @@
    "source": [
     "# select products to be loaded\n",
     "reflectivity_product = radar_data_holder.get_product(openstorm_radar_py.VolumeTypes.VOLUME_REFLECTIVITY)\n",
+    "velocity_product = radar_data_holder.get_product(openstorm_radar_py.VolumeTypes.VOLUME_VELOCITY)\n",
     "# derived products\n",
-    "rotation_product = radar_data_holder.get_product(openstorm_radar_py.VolumeTypes.VOLUME_ROTATION)\n",
-    "srv_product = radar_data_holder.get_product(openstorm_radar_py.VolumeTypes.VOLUME_STORM_RELATIVE_VELOCITY)"
+    "srv_product = radar_data_holder.get_product(openstorm_radar_py.VolumeTypes.VOLUME_STORM_RELATIVE_VELOCITY)\n",
+    "rotation_product = radar_data_holder.get_product(openstorm_radar_py.VolumeTypes.VOLUME_ROTATION)"
    ]
   },
   {
@@ -209,6 +229,7 @@
    "source": [
     "# load file\n",
     "radar_data_holder.load(\"../OpenStorm/Content/Data/Demo/KTLX20130531_231434_V06\")\n",
+    "#radar_data_holder.load(\"../files/el-reno/compressed/KTLX20130531_231434_V06.gz\")\n",
     "# wait for it to finish loading because RadarDataHolder is asynchronous and multi-threaded\n",
     "while(radar_data_holder.get_state() == openstorm_radar_py.RadarDataHolder.DataStateLoading):\n",
     "\tprint(\"loading...\", end='\\r')\n",
@@ -223,10 +244,11 @@
    "outputs": [],
    "source": [
     "# get now loaded RadarData objects from products\n",
-    "print(\"is reflectivity loaded?\", reflectivity_product.is_loaded(), \"   is rotation loaded?\", rotation_product.is_loaded(), \"   is srv loaded?\", srv_product.is_loaded())\n",
+    "print(\"is reflectivity loaded?\", reflectivity_product.is_loaded(), \"   is velocity loaded?\", velocity_product.is_loaded(), \"   is srv loaded?\", srv_product.is_loaded(), \"   is rotation loaded?\", rotation_product.is_loaded())\n",
     "reflectivity_data = reflectivity_product.get_radar_data()\n",
-    "rotation_data = rotation_product.get_radar_data()\n",
-    "srv_data = srv_product.get_radar_data()"
+    "velocity_data = velocity_product.get_radar_data()\n",
+    "srv_data = srv_product.get_radar_data()\n",
+    "rotation_data = rotation_product.get_radar_data()"
    ]
   },
   {
@@ -235,14 +257,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(reflectivity_data._ptr, rotation_data._ptr, srv_data._ptr)\n",
+    "print(reflectivity_data._ptr, velocity_data._ptr, rotation_data._ptr, srv_data._ptr)\n",
     "print(reflectivity_data.buffer)\n",
-    "time.sleep(1)\n",
+    "#time.sleep(1)\n",
     "plot_radial_image(np.array(reflectivity_data.buffer)[0,1:-1,:1000])\n",
-    "time.sleep(0.5)\n",
-    "plot_radial_image(np.array(rotation_data.buffer)[0,1:-1,:1000])\n",
-    "time.sleep(0.5)\n",
-    "plot_radial_image(np.clip(np.array(srv_data.buffer),-10, 10)[0,1:-1,:1000])"
+    "#time.sleep(0.5)\n",
+    "plot_radial_image(np.array(velocity_data.buffer)[0,1:-1,:1000])\n",
+    "#time.sleep(0.5)\n",
+    "plot_radial_image(np.clip(np.array(srv_data.buffer),-10, 10)[0,1:-1,:1000])\n",
+    "#time.sleep(0.5)\n",
+    "plot_radial_image(np.array(rotation_data.buffer)[0,1:-1,:1000])"
    ]
   },
   {
@@ -297,7 +321,11 @@
     "radar_data_realtime = openstorm_radar_py.RadarData(5, 720, 1000)\n",
     "while 0:\n",
     "\trealtime_data_dir = \"../radar-data/data/KMKX/\"\n",
+    "\tradar_data_realtime = openstorm_radar_py.RadarData()\n",
     "\tradar_data_realtime.load_nexrad_file(realtime_data_dir + os.listdir(realtime_data_dir)[-1], openstorm_radar_py.VolumeTypes.VOLUME_REFLECTIVITY)\n",
+    "\tif radar_data_realtime.buffer is None:\n",
+    "\t\ttime.sleep(1)\n",
+    "\t\tcontinue\n",
     "\tbuffer = np.array(radar_data_realtime.buffer)[:,1:-1,:]\n",
     "\tfig = plt.figure(figsize=(12,12))\n",
     "\tradiusShown = min(1000, buffer.shape[2])\n",
@@ -306,8 +334,7 @@
     "\t\tax = fig.add_subplot(math.ceil(math.sqrt(buffer.shape[0])), math.ceil(math.sqrt(buffer.shape[0])), i + 1, polar='True')\n",
     "\t\tar = ax.pcolormesh(theta, rad, np.transpose(buffer[i,:,:radiusShown]), shading='auto')\n",
     "\tIPython.display.clear_output(wait=True)\n",
-    "\tplt.show()\n",
-    "\t"
+    "\tplt.show()"
    ]
   }
  ],
