Added additional location functions

--- a/libtest.ipynb
+++ b/libtest.ipynb
@@ -96,7 +96,8 @@
     "print(\"pixel value:\", buffer[pixel_location[0], pixel_location[1], pixel_location[2]])\n",
     "\n",
     "# invalid example below lowest sweep\n",
-    "print(\"invalid output\", radar_data.get_pixel_for_location(stats[\"latitude\"] - 1, stats[\"longitude\"] + 1, 0))"
+    "print(\"invalid output\", radar_data.get_pixel_for_location(stats[\"latitude\"] - 0.1, stats[\"longitude\"] + 0.1, 0))\n",
+    "print(\"radar space location\", radar_data.get_radar_space_for_location(stats[\"latitude\"] - 0.1, stats[\"longitude\"] + 0.1, 0))\n"
    ]
   },
   {
@@ -134,8 +135,6 @@
     "\n",
     "# plot entire buffer on rectangular image\n",
     "fig = plt.figure(figsize=(12,12))\n",
-    "ax = fig.add_subplot()\n",
-    "ax.imshow(np.concatenate(buffer), interpolation='nearest')\n",
     "ax = fig.add_subplot()\n",
     "ax.imshow(np.concatenate(buffer), interpolation='nearest')\n",
     "plt.show()\n",
@@ -248,7 +247,8 @@
     "reflectivity_data = reflectivity_product.get_radar_data()\n",
     "velocity_data = velocity_product.get_radar_data()\n",
     "srv_data = srv_product.get_radar_data()\n",
-    "rotation_data = rotation_product.get_radar_data()"
+    "rotation_data = rotation_product.get_radar_data()\n",
+    "velocity_data.get_stats()"
    ]
   },
   {
