--- a/libtest.ipynb
+++ b/libtest.ipynb
@@ -336,6 +336,30 @@
     "\tIPython.display.clear_output(wait=True)\n",
     "\tplt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# recompress archive to gzip for faster loading but somewhat larger files\n",
+    "def recompress_test(file_name):\n",
+    "\tsize_before = os.path.getsize(file_name)\n",
+    "\topenstorm_radar_py.recompress_nexrad_archive(file_name, \"tmp_radar_file_test\")\n",
+    "\tsize_after = os.path.getsize(\"tmp_radar_file_test\")\n",
+    "\tos.unlink(\"tmp_radar_file_test\")\n",
+    "\tprint(\"before:\", size_before, \"after recompress:\", size_after, \"ratio:\", size_after / size_before)\n",
+    "\n",
+    "print(\"from bzip2 KLCH20200827_034044_V06\")\n",
+    "recompress_test(\"../OpenStorm/Content/Data/Demo/KLCH20200827_034044_V06\")\n",
+    "print(\"from bzip2 KMKX_20220723_235820\")\n",
+    "recompress_test(\"../OpenStorm/Content/Data/Demo/KMKX_20220723_235820\")\n",
+    "print(\"from uncompressed KTLX20130531_231434_V06\")\n",
+    "recompress_test(\"../OpenStorm/Content/Data/Demo/KTLX20130531_231434_V06\")\n",
+    "print(\"from gzip KHTX20110427_220236_V03\")\n",
+    "recompress_test(\"../files/tornado-2011/KHTX20110427_220236_V03.gz\")"
+   ]
   }
  ],
  "metadata": {
