Add sweep info and volume types

--- a/libtest.ipynb
+++ b/libtest.ipynb
@@ -72,6 +72,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sweepInfo = radar_data.get_sweep_info()\n",
+    "sweepInfo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# convert to numpy array\n",
     "# there are 2 duplicated rays in each sweep that are used for padding for interpolation. In most cases they should be ignored or removed like below.\n",
     "# The first dimension is the sweep the second is the rotation and the third is the distance away from the radar.\n",
@@ -90,10 +100,13 @@
     "# get a pixel's position for a latitude and longitude\n",
     "location = radar_data.get_pixel_for_location(stats[\"latitude\"] - 1, stats[\"longitude\"] + 1, 3000)\n",
     "print(\"get_pixel_for_location output\", location)\n",
-    "# get pixel in buffer\n",
-    "pixel_location = (math.floor(location[\"sweep\"]), math.floor(location[\"theta\"]), math.floor(location[\"radius\"]))\n",
-    "print(\"pixel location:\", pixel_location)\n",
-    "print(\"pixel value:\", buffer[pixel_location[0], pixel_location[1], pixel_location[2]])\n",
+    "try:\n",
+    "\t# get pixel in buffer\n",
+    "\tpixel_location = (math.floor(location[\"sweep\"]), math.floor(location[\"theta\"]), math.floor(location[\"radius\"]))\n",
+    "\tprint(\"pixel location:\", pixel_location)\n",
+    "\tprint(\"pixel value:\", buffer[pixel_location[0], pixel_location[1], pixel_location[2]])\n",
+    "except:\n",
+    "\tpass\n",
     "\n",
     "# invalid example below lowest sweep\n",
     "print(\"invalid output\", radar_data.get_pixel_for_location(stats[\"latitude\"] - 0.1, stats[\"longitude\"] + 0.1, 0))\n",
